fixed z-index issue

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: calc(100vw - 50px);
-  z-index: 1;
+  z-index: 2;
   padding: 15px 25px;
   background-color: var(--white);
 }
